shared/src/test/data/yeast/invalid-json/diffline-map-entries.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'x'
Indicator           6,  2,  4 '\"'
EndScalar           7,  2,  5 ''
Indicator           7,  2,  5 ':'
LineBreak           8,  2,  6 '\n'
WhiteSpace          9,  3,  0 '  '
BeginMapping       11,  3,  2 '{'
LineBreak          12,  3,  3 '\n'
WhiteSpace         13,  4,  0 '    '
BeginScalar        17,  4,  4 ''
Indicator          17,  4,  4 '\"'
Text               18,  4,  5 'serialNumber'
Indicator          30,  4, 17 '\"'
EndScalar          31,  4, 18 ''
Indicator          31,  4, 18 ':'
WhiteSpace         32,  4, 19 ' '
BeginScalar        33,  4, 20 ''
Indicator          33,  4, 20 '\"'
Text               34,  4, 21 '1111111'
Indicator          41,  4, 28 '\"'
EndScalar          42,  4, 29 ''
Indicator          42,  4, 29 ','
LineBreak          43,  4, 30 '\n'
WhiteSpace         44,  5,  0 '    '
BeginScalar        48,  5,  4 ''
Indicator          48,  5,  4 '\"'
Text               49,  5,  5 'connection'
Indicator          59,  5, 15 '\"'
EndScalar          60,  5, 16 ''
Indicator          60,  5, 16 ':'
BeginMapping       61,  5, 17 '{'
LineBreak          62,  5, 18 '\n'
WhiteSpace         63,  6,  0 '      '
BeginScalar        69,  6,  6 ''
Indicator          69,  6,  6 '\"'
Text               70,  6,  7 'index'
Indicator          75,  6, 12 '\"'
EndScalar          76,  6, 13 ''
Indicator          76,  6, 13 ':'
WhiteSpace         77,  6, 14 ' '
BeginScalar        78,  6, 15 ''
Text               78,  6, 15 '10'
EndScalar          80,  6, 17 ''
LineBreak          80,  6, 17 '\n'
WhiteSpace         81,  7,  0 '    '
EndMapping         85,  7,  4 '}'
LineBreak          86,  7,  5 '\n'
WhiteSpace         87,  8,  0 '  '
EndMapping         89,  8,  2 '}'
LineBreak          90,  8,  3 '\n'
Indicator          91,  9,  0 ','
LineBreak          92,  9,  1 '\n'
WhiteSpace         93, 10,  0 '  '
BeginScalar        95, 10,  2 ''
Indicator          95, 10,  2 '\"'
Text               96, 10,  3 'y'
Indicator          97, 10,  4 '\"'
EndScalar          98, 10,  5 ''
Indicator          98, 10,  5 ':'
WhiteSpace         99, 10,  6 ' '
BeginScalar       100, 10,  7 ''
Indicator         100, 10,  7 '\"'
Text              101, 10,  8 'UPGRADE'
Indicator         108, 10, 15 '\"'
EndScalar         109, 10, 16 ''
LineBreak         109, 10, 16 '\n'
EndMapping        110, 11,  0 '}'